test/src/e2e_vm_tests/test_programs/should_fail/attributes_invalid_multiplicity/src/storage_attr.sw
library;

pub struct S { }

impl S {
    #[storage(read, write)]
    pub fn ok() { }

    #[storage(read)]
    #[storage(write)]
    #[storage(read, write), storage(read)]
    #[storage(write)]
    pub fn not_ok() { }
}